src/objects/LoggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the functionality of Logger</description>
    <fields>
        <fullName>AnonymousMode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, any logs generated will not have any user-specific details set - any fields related to the User, Profile, etc. will be null.</inlineHelpText>
        <label>Anonymous Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyDataMaskRules__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, any data-mask rules (configured in LogEntryDataMaskRule__mdt) will be automatically applied to log entry messages.</inlineHelpText>
        <label>Apply Data Mask Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultLogShareAccessLevel__c</fullName>
        <defaultValue>&apos;Read&apos;</defaultValue>
        <description>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.

Possible Values:
(blank)
Read
Edit</description>
        <inlineHelpText>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.

Possible Values:
(blank)
Read
Edit</inlineHelpText>
        <label>Default Log Records Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultNumberOfDaysToRetainLogs__c</fullName>
        <defaultValue>14</defaultValue>
        <description>This value is used to set the field Log__c.LogRetentionDate__c,  which is then used by LogBatchPurger to delete old logs. To keep  logs indefinitely, set this field to blank (null).</description>
        <inlineHelpText>This value is used to set the field Log__c.LogRetentionDate__c,  which is then used by LogBatchPurger to delete old logs. To keep  logs indefinitely, set this field to blank (null).</inlineHelpText>
        <label>Default Number of Days to Retain Logs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultSaveMethod__c</fullName>
        <defaultValue>&apos;EVENT_BUS&apos;</defaultValue>
        <description>Defaults to &apos;EVENT_BUS&apos;. This controls the default save method used by Logger when calling saveLog().

Possible values:
EVENT_BUS
QUEUEABLE
REST</description>
        <inlineHelpText>Defaults to &apos;EVENT_BUS&apos;. This controls the default save method used by Logger when calling saveLog().

Possible values:
EVENT_BUS
QUEUEABLE
REST</inlineHelpText>
        <label>Save Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableSystemMessages__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When enabled, log entries may be generated that contain additional details about the logging system.</description>
        <inlineHelpText>When enabled, log entries may be generated that contain additional details about the logging system.</inlineHelpText>
        <label>Enable System Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggingLevel__c</fullName>
        <defaultValue>&apos;DEBUG&apos;</defaultValue>
        <inlineHelpText>Possible values:
ERROR
WARN
INFO
DEBUG
FINE
FINER
FINEST</inlineHelpText>
        <label>Logging Level</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StripInaccessibleRecordFields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, any time an SObject record is logged, only fields that the current user can access will be included in the record&apos;s JSON.</inlineHelpText>
        <label>Strip Inaccessible Record Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SystemLogMessageFormat__c</fullName>
        <defaultValue>&apos;{OriginLocation__c}\n{Message__c}&apos;</defaultValue>
        <inlineHelpText>Use to format the Apex Log System Debug messages with fields from LogEntryEvent__e</inlineHelpText>
        <label>System Log Message Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Logger Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>IsEnabled__c</columns>
        <columns>LoggingLevel__c</columns>
        <columns>ApplyDataMaskRules__c</columns>
        <columns>StripInaccessibleRecordFields__c</columns>
        <columns>AnonymousMode__c</columns>
        <columns>SystemLogMessageFormat__c</columns>
        <columns>DefaultLogShareAccessLevel__c</columns>
        <columns>DefaultNumberOfDaysToRetainLogs__c</columns>
        <columns>EnableSystemMessages__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>